# SPA-comments

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  celery_app.py  entrypoint.sh  locustfile.py  pyproject.toml  pytest.ini  seed_comments.py
backend/apps/attachments/: interfaces.py  models.py  processors.py  serializers.py  services.py  strategy.py
backend/apps/attachments/migrations/: 0001_initial.py
backend/apps/captcha_app/: apps.py  services.py  urls.py  views.py
backend/apps/comments/: apps.py  filters.py  handlers.py  models.py  repository.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/notifications/: emails.py  tasks.py
backend/apps/users/: jwt.py  models.py  repository.py  serializers.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: asgi.py  celery_app.py  urls.py
backend/config/settings/: base.py  development.py  production.py
backend/core/: cache.py  exceptions.py  pagination.py  validators.py
backend/load_tests/: helpers.py  pool.py
backend/load_tests/users/: posting.py  reading.py  replying.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_captcha_api.py  test_comment_repository.py  test_comments_api.py  test_user_repository.py  test_ws_consumer.py
backend/tests/unit/: test_attachment_serializer.py  test_attachment_service.py  test_build_tree.py  test_cache.py  test_captcha_service.py  test_comment_service.py  test_email.py  test_handlers.py  test_processors.py  test_strategy.py  test_tasks.py  test_validators.py
backend/websocket/: consumers.py  routing.py
docs/: db_schema.mwb  db_schema.sql
frontend/: Dockerfile  vite.config.js
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: CommentForm.vue  CommentItem.vue  CommentList.vue  LightboxViewer.vue
frontend/src/composables/: useWebSocket.js
nginx/: nginx.conf
