[tool.poetry]
name = "spa-comments"
version = "0.1.0"
description = "SPA Comments App — Assessment Task"
authors = ["Denys Kibalenko <denyskibalenko@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=6.0.4,<7.0.0"
djangorestframework = ">=3.17.1,<4.0.0"
django-cors-headers = ">=4.9.0,<5.0.0"
django-filter = ">=25.2,<26.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
channels = {version = ">=4.3.2,<5.0.0", extras = ["daphne"]}
channels-redis = ">=4.3.0,<5.0.0"
daphne = ">=4.2.1,<5.0.0"
psycopg2-binary = ">=2.9.12,<3.0.0"
django-redis = ">=6.0.0,<7.0.0"
celery = {version = ">=5.6.3,<6.0.0", extras = ["redis"]}
flower = ">=2.0.1,<3.0.0"
pillow = ">=12.2.0,<13.0.0"
bleach = ">=6.3.0,<7.0.0"
captcha = ">=0.7.1,<0.8.0"
python-decouple = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-django = ">=4.12.0,<5.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
factory-boy = ">=3.3.3,<4.0.0"
locust = ">=2.43.4,<3.0.0"
ipython = ">=9.12.0,<10.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=6.3.0,<7.0.0"
ipykernel = "^7.2.0"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "*/apps.py",
    "config/*",
    "manage.py",
    "conftest.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
